<?xml version="1.0"?>
<package format="3">
  <name>aruco_pose_estimator_cpp</name>
  <version>0.0.1</version>
  <description>C++ ROS2 ArUco pose estimator publishing marker pose for landing spots in drone_base.</description>

  <maintainer email="said@sapience.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
